# back-RAG-qdrant

./: README.md
backend/: Dockerfile  docker-compose.yaml  pyproject.toml
backend/app/: server.py
backend/app/AI/: PROMPTS.py  chain.py  retriever.py
backend/app/bdd/: crud.py  information_manage.py  models.py  postgres.py  qdrant.py  qdrant_manage.py
backend/app/constants/: constants.py
backend/app/models/: models.py
backend/app/routes/: routes_bd.py  routes_history.py  routes_qdrant.py  routes_upload.py
backend/app/schemas/: schemas.py  schemas_qdrant.py  upload.py
backend/app/static/: 2024_BASES FONDO 1A1-PUBLICACION 1.docx  Arquitectura del HPC a nivel de GPU.docx
backend/app/utils/: utils.py
