[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "2.7.4"
transformers = "^4.43.3"
langchain = "0.2.13"
langchain-community = "0.2.12"
openai = "^1.38.0"
sentence-transformers = "^3.0.1"
langchain-qdrant = "0.1.3"
langchain-core = "0.2.30"
beautifulsoup4 = "^4.12.3"
argostranslate = "^1.9.6"
python-multipart = "^0.0.9"
html2text = "^2024.2.26"



[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
