[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
transformers = "^4.43.3"
langchain = "0.1.20"
langchain-community = "0.0.38"
sentence-transformers = "^3.0.1"
langchain-qdrant = "0.1.1"
langchain-core = "0.1.52"
beautifulsoup4 = "^4.12.3"
argostranslate = "^1.9.6"
python-multipart = "^0.0.9"
html2text = "^2024.2.26"
rank-bm25 = "^0.2.2"
langid = "^1.1.6"
langchain-openai = "0.1.1"
httpx = "^0.27.0"
openai = "1.10.0"
sqlalchemy = "2.0.29"
langchain-text-splitters = "0.0.2"
redis = "^5.0.8"




[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
